specs/blueprints/errors/parsing/attribute_without_key.eno
# An attribute without a key

-- input
field:
= value
-- input

## ParseError

-- text
The attribute in line 2 has no key.
-- text

-- snippet
   Line | Content
      1 | field:
 >    2 | = value
-- snippet

selection: [1,0] => [1,0]
